--- a/templates/casino-1.html
+++ b/templates/casino-1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<title>KadroMilyon</title>
+	<title>Şahbet</title>
 	<link rel="stylesheet" href="/css/style.css" />
 	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/fontawesome.min.css" />
@@ -15,6 +15,7 @@
 	<app-header>
 		<app-home-header class="sticky-top">
 			<div class="nav">
+				<div class="logo"> <a href="/"> <img src="/img/logo.png" /> </a> </div>
 				<div class="fast-links">
 					<a href="#." class="btn"> <i class="km km-affiliate"></i> Affiliate </a>
 					<a href="#." class="btn"> <i class="km km-call"></i> Sizi Arayalım </a>
@@ -22,46 +23,59 @@
 					<a href="#." class="btn"> <i class="km km-telegram"></i> Telegram </a>
 					<a href="#." class="btn"> <i class="km km-twitter"></i> Twitter </a>
 				</div>
-				<div class="logo"> <a href="/"> <img src="/img/logo.png" /> </a> </div>
 				<div class="rightmenu">
+					{% if not current_user.is_authenticated %}
 					<app-not-loggedin>
-						<a href="#." class="btn login-btn"> <i class="fa-solid fa-right-to-bracket"></i> Giriş Yap </a>
-						<a href="#." class="btn register-btn"> <i class="fa-solid fa-user-plus"></i> Kayıt Ol </a>
+							<a href="/login" class="btn login-btn"> <i class="fa-solid fa-right-to-bracket"></i> Giriş Yap </a>
+							<a href="/register" class="btn register-btn"> <i class="fa-solid fa-user-plus"></i> Kayıt Ol </a>
 						<div class="lang-select">
 							<div class="view"> <img src="/img/flag/tr.png" /> TR <i class="fa-solid fa-chevron-down"></i> </div>
 						</div>
-						<div class="timer">
+						<div class="timer" id="timer">
 							16:40:50
 						</div>
+						<script>
+							function setTimer(){
+								var d = new Date();
+								var n = d.toLocaleTimeString();
+								document.getElementById("timer").innerText = n;
+							}
+							setInterval(setTimer, 1000)
+						</script>
 						<a href="#." class="notification"> <i class="fa-solid fa-bell"></i> </a>
 					</app-not-loggedin>
-					<app-loggedin style="display:none">
-						<a href="#." class="btn price-btn"> <i class="fa-solid fa-turkish-lira-sign"></i> 3.442,00 <i class="fa-solid fa-sort-down"></i> </a>
-						<a href="#." class="btn setting-btn"> <i class="fa-solid fa-gear"></i> </a>
-						<a href="#." class="btn notification-btn"> <i class="fa-regular fa-bell"></i> <div class="counter">2</div> </a>
-						<a href="#." class="btn profile-btn"> <img src="/img/profile-demo.png" /> </a>
+					{% else %}
+					<app-loggedin>
+						<a href="#." class="btn price-btn"> <i class="fa-solid fa-turkish-lira-sign"></i>
+							{% if current_user.sports_bonus_balance + current_user.casino_bonus_balance > 0 %}
+								<span style="display: inline-block; vertical-align: middle">
+									<p style="font-size: 12px; margin-bottom: 0; margin-block-start: 0; margin-block-end: 0;">{{'%0.2f'| format(current_user.balance|float)}}</p>
+									<p style="font-size: 8px; color: var(--baseColor); margin-top: 0; margin-bottom: 0; margin-block-start: 0; margin-block-end: 0">{{'%0.2f'| format(current_user.casino_bonus_balance + current_user.sports_bonus_balance |float)}}</p>
+								</span>
+							{% else %}
+								{{'%0.2f'| format(current_user.balance|float)}}
+							{% endif %}
+						</a>
+						<a href="/profile" class="btn setting-btn"> <i class="fa-solid fa-gear"></i> </a>
+						<a href="/notifications" class="btn notification-btn"> <i class="fa-regular fa-bell"></i> <div class="counter">0</div> </a>
+						<a href="/profile" class="btn profile-btn"> <img src="/img/profile-demo.png" /> </a>
 					</app-loggedin>
+					{% endif %}
 				</div>
 			</div>
 			<div class="menu-container">
 				<div class="menu">
-					<a href="" class="n-link"> <i class="km km-live"></i> <span>CANLI BAHİS</span> </a>
-					<a href="" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a>
-					<a href="" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a>
-					<a href="" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
-					<a href="" class="n-link"> <i class="km km-games"></i> <span>OYUNLAR</span> </a>
-					<a href="" class="n-link"> <i class="km km-esports"></i> <span>E-SPOR</span> </a>
-					<a href="" class="n-link"> <i class="km km-vsports"></i> <span>SANAL SPOR</span> </a>
-					<a href="" class="n-link"> <i class="km km-tv"></i> <span>TV GAMES</span> </a>
-					<a href="" class="n-link"> <i class="km km-tomb"></i> <span>TOMBALA</span> </a>
-					<a href="" class="n-link"> <i class="km km-aviator"></i> <span>AVIATOR</span> </a>
-					<a href="" class="n-link"> <i class="km km-promotions"></i> <span>PROMOSYONLAR</span> </a>
+					<a href="/canli_bahis" class="n-link"> <i class="km km-live"></i> <span>CANLI BAHİS</span> </a>
+					<a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a>
+					<a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a>
+					<a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
+					<a href="/casino" class="n-link"> <i class="km km-games"></i> <span>OYUNLAR</span> </a>
+					<a href="/casino?search_query=bingo" class="n-link"> <i class="km km-tomb"></i> <span>TOMBALA</span> </a>
+					<a href="/casino/1022357" class="n-link"> <i class="km km-aviator"></i> <span>AVIATOR</span> </a>
+					<a href="/promotions" class="n-link"> <i class="km km-promotions"></i> <span>PROMOSYONLAR</span> </a>
 				</div>
 			</div>
 		</app-home-header>
-		<site-alert>
-			Güncel adresimiz <span>kadromilyon.com’dur,</span> bir sonra ki adres ise <span>kadromilyon1.com</span> olacaktır. <a href="#." class="close"> <i class="fa-regular fa-circle-xmark"></i> </a>
-		</site-alert>
 	</app-header>
 	<app-content>
 		<div class="container cas">
@@ -74,200 +88,56 @@
 						</div>
 						<div class="part only-mobile">
 							<div class="gameproviders">
-								<a href="#."> Volted </a>
-								<a href="#."> Ruby Play </a>
-								<a href="#." class="active"> Pragmatic Play </a>
-								<a href="#."> Provier 4 </a>
-								<a href="#."> Provier 5 </a>
-								<a href="#."> Provier 6 </a>
-								<a href="#."> Provier 7 </a>
-							</div>
-						</div>
-						<div class="part only-mobile">
-							<div class="gamessettings">
-								<a href="#."> Popüler </a>
-								<a href="#."  class="active"> Tümü </a>
-								<a href="#."> Drop&Wins </a>
-								<a href="#."> Yeni Oyunlar </a>
-								<a href="#."> Seçenek 5 </a>
-								<a href="#."> Seçenek 6 </a>
+								{% for i in providers %}
+						                          <a href="/casino?provider_id={{ i.id }}&provider_name={{ i.name }}"> {{ i.name }} </a>
+						                {% endfor %}
 							</div>
 						</div>
 						<div class="part only-desk">
-							<div class="filter">
-								<select name="" id="">
-									<option value="">Filtre</option>
-									<option value="">Filtre 1</option>
-									<option value="">Filtre 2</option>
-									<option value="">Filtre 3</option>
-								</select>
-							</div>
-							<div class="filter">
-								<select name="" id="">
-									<option value="">Sağlayıcılar</option>
-									<option value="">Filtre 1</option>
-									<option value="">Filtre 2</option>
-									<option value="">Filtre 3</option>
-								</select>
+							<div class="gameproviders">
+								{% for i in providers %}
+						                          <a href="/casino?provider_id={{ i.id }}&provider_name={{ i.name }}"> {{ i.name }} </a>
+						                {% endfor %}
 							</div>
 						</div>
 					</div>
 					<div class="games-cont">
 						<div class="games">
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/1.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> 5 Lios Dance </div>
-											<div class="game-provider"> Pragmatic Play </div>
+							{% if provider_id %}
+								{% for i in games %}
+									<a href="/casino/{{ i.id }}">
+										<div class="game-content">
+											<img src="{{i.img_vertical}}" />
+											<div class="parts">
+												<div class="part">
+													<div class="game-title"> {{ i.name }}  </div>
+													<div class="game-provider"> {{ i.provider_name }} </div>
+												</div>
+												<div class="part">
+													<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
+												</div>
+											</div>
 										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
+									</a>
+								{% endfor %}
+							{% else %}
+							{% for i in games_popular %}
+									<a href="/casino/{{ i.id }}">
+										<div class="game-content">
+											<img src="{{i.img_vertical}}" />
+											<div class="parts">
+												<div class="part">
+													<div class="game-title"> {{ i.name }}  </div>
+													<div class="game-provider"> Pragmatic Play </div>
+												</div>
+												<div class="part">
+													<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
+												</div>
+											</div>
 										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/2.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Big Bass Bonanza </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/3.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Book of Kindoms </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/4.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Chritsmas Carol Megaways </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/5.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Congo Cash </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/6.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Cowboys Gold </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/7.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Dragon Kingdom Eyes of Fire </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/7.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Emerald King </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/8.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Emerald King Rainbow Road </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/9.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Eye Of The Storm </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#.">
-								<div class="game-content">
-									<img src="/img/casino_games/10.webp" />
-									<div class="parts">
-										<div class="part">
-											<div class="game-title"> Gates of Olympus </div>
-											<div class="game-provider"> Pragmatic Play </div>
-										</div>
-										<div class="part">
-											<div class="game-play"> <i class="fa-solid fa-play"></i> </div>
-										</div>
-									</div>
-								</div>
-							</a>
+									</a>
+								{% endfor %}
+							{% endif %}
 						</div>
 					</div>
 				</div>
@@ -316,13 +186,13 @@
 				</div>
 				<div class="copy">
 					<a href="#." class="licence-url"> <img src="/img/licence.png" /> </a>
-					<p> Kadromilyon.com is operated by Data Link Digital B.V. registered under No. 164124 at, Chuchubiweg 17, Curaçao. This website is licensed and regulated by Curaçao eGaming, license No. 1668/JAZ.  In
+					<p> M2 is operated by Data Link Digital B.V. registered under No. 164124 at, Chuchubiweg 17, Curaçao. This website is licensed and regulated by Curaçao eGaming, license No. 1668/JAZ.  In
 	order to register for this website, the user is required to accept the “<a href="#.">General Terms and Conditions.</a>" In the event the ”<a href="#.">General Terms and Conditions</a>" are updated, existing users may choose to
 	discontinue using the products and services before the said update shall become effective, which is a minimum of two weeks after it has been announced.  </p>
 				</div>
 				<div class="finish">
 					<a href="/"> <img src="/img/logo.png" /> </a>
-					<p> 2024 © KadroMilyon </p>
+					<p> 2024 © Şahbey </p>
 				</div>
 			</div>
 		</div>
